test/Fail/Issue2344.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  Check definition of toNat-injective : (A : Set) (X : _18 (A = A))
                                        (i : Fin (_m_23 (A = A) (X = X))) →
                                        T (toNat (_m_23 (A = A) (X = X)) i)
    stuck because
      Issue2344.agda:26.22-28: error: [SplitError.UnificationStuck]
      I'm not sure if there should be a case for the constructor zero,
      because I get stuck when trying to solve the following unification
      problems (inferred index ≟ expected index):
        suc n ≟ _m_23 (A = A) (X = X)
      when checking that the pattern zero n has type
      Fin (_m_23 (A = A) (X = X))
    (blocked on _m_23)

Issue2344.agda:25.31-47: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue2344.agda:25.31-32
  Issue2344.agda:25.46-47
